WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185378
[GTK] SoupNetworkSession.h:68:62: error: unknown type name 'URL'
https://bugs.webkit.org/show_bug.cgi?id=185378
Summary
[GTK] SoupNetworkSession.h:68:62: error: unknown type name 'URL'
Antoine Jacoutot
Reported
2018-05-07 07:48:09 PDT
Hi. When trying to build WebKitGTK 2.20.2 on OpenBSD amd64, I am running into the following error: In file included from DerivedSources/WebKit/unified-sources/UnifiedSource59.cpp:2: In file included from /hack/objdirs/pobj/webkitgtk4-2.20.2/webkitgtk-2.20.2/Source/WebKit/WebProcess/gtk/WebProcessMainGtk.cpp:32: In file included from DerivedSources/ForwardingHeaders/WebCore/SoupNetworkSession.h:1: /hack/objdirs/pobj/webkitgtk4-2.20.2/webkitgtk-2.20.2/Source/WebCore/platform/network/soup/SoupNetworkSession.h:68:62: error: unknown type name 'URL' static std::optional<ResourceError> checkTLSErrors(const URL&, GTlsCertificate*, GTlsCertificateFlags); ^ 1 error generated.
Attachments
Patch fixing the problem.
(525 bytes, patch)
2018-05-14 14:25 PDT
,
Thomas Klausner
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews125 for ios-simulator-wk2
(2.19 MB, application/zip)
2018-05-14 16:07 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews205 for win-future
(12.83 MB, application/zip)
2018-05-14 19:51 PDT
,
EWS Watchlist
no flags
Details
Updated patch.
(1.04 KB, patch)
2018-05-15 01:31 PDT
,
Thomas Klausner
no flags
Details
Formatted Diff
Diff
include sorted alphabetically
(369 bytes, patch)
2018-05-15 01:55 PDT
,
Antoine Jacoutot
no flags
Details
Formatted Diff
Diff
Next try at conformant patch.
(1.04 KB, patch)
2018-05-15 08:19 PDT
,
Thomas Klausner
no flags
Details
Formatted Diff
Diff
Patch
(1.16 KB, patch)
2018-05-15 09:28 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2018-05-07 13:28:45 PDT
Happens on Linux too
Thomas Klausner
Comment 2
2018-05-07 14:09:44 PDT
And on NetBSD.
Antoine Jacoutot
Comment 3
2018-05-14 03:00:03 PDT
Did any of you guys find a workaround for this? (besides reverting the commit) Thanks.
Michael Catanzaro
Comment 4
2018-05-14 06:42:02 PDT
Just #include "URL.h" and submit a patch if that fixes it for you.
Thomas Klausner
Comment 5
2018-05-14 14:25:11 PDT
Created
attachment 340358
[details]
Patch fixing the problem. The patch follows a suggestion by Michael Catanzaro, and fixes the problem for me.
Adrian Perez
Comment 6
2018-05-14 14:27:32 PDT
Patch looks good to me. I have submitted to patch to the EWS, and if it builds fine there, I think we should land this.
EWS Watchlist
Comment 7
2018-05-14 14:29:02 PDT
Attachment 340358
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/network/soup/SoupNetworkSession.h:35: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 1 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adrian Perez
Comment 8
2018-05-14 14:29:25 PDT
Comment on
attachment 340358
[details]
Patch fixing the problem. View in context:
https://bugs.webkit.org/attachment.cgi?id=340358&action=review
> Source/WebCore/platform/network/soup/SoupNetworkSession.h:35 > +#include <URL.h>
Could you please sort the #include lines alphabetically and re-submit? In WebKit we try to keep them always sorted, unless there is some technical reason why that is not possible. Thanks in advance!
Michael Catanzaro
Comment 9
2018-05-14 15:28:19 PDT
Please also add a changelog entry with Tools/Scripts/prepare-ChangeLog -b 185378 if you want credit, otherwise I'll just push this.
Michael Catanzaro
Comment 10
2018-05-14 15:29:02 PDT
(with the include in the right place, yes)
EWS Watchlist
Comment 11
2018-05-14 16:07:24 PDT
Comment on
attachment 340358
[details]
Patch fixing the problem.
Attachment 340358
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/7682352
New failing tests: transitions/interrupted-transition-hardware.html
EWS Watchlist
Comment 12
2018-05-14 16:07:26 PDT
Created
attachment 340372
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.4
EWS Watchlist
Comment 13
2018-05-14 19:51:11 PDT
Comment on
attachment 340358
[details]
Patch fixing the problem.
Attachment 340358
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/7684602
New failing tests: http/tests/security/canvas-remote-read-remote-video-localhost.html
EWS Watchlist
Comment 14
2018-05-14 19:51:22 PDT
Created
attachment 340388
[details]
Archive of layout-test-results from ews205 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews205 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Thomas Klausner
Comment 15
2018-05-15 01:31:03 PDT
Created
attachment 340398
[details]
Updated patch. Updated patch, headers sorted like suggested. Also includes a Changelog entry. Thanks for the feedback!
Antoine Jacoutot
Comment 16
2018-05-15 01:55:09 PDT
Created
attachment 340399
[details]
include sorted alphabetically Works for me on OpenBSD.
EWS Watchlist
Comment 17
2018-05-15 06:44:54 PDT
Attachment 340398
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/network/soup/SoupNetworkSession.h:31: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Thomas Klausner
Comment 18
2018-05-15 08:19:22 PDT
Created
attachment 340411
[details]
Next try at conformant patch. Patch with headers in ASCII sort order instead of in natural language sort order, hope this passes the style checker now.
Michael Catanzaro
Comment 19
2018-05-15 09:26:51 PDT
Comment on
attachment 340411
[details]
Next try at conformant patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=340411&action=review
> Source/WebCore/platform/network/soup/SoupNetworkSession.h:29 > +#include <URL.h>
It's going to complain that you didn't use "quotes". I'll fix that before landing.
Michael Catanzaro
Comment 20
2018-05-15 09:28:45 PDT
Created
attachment 340415
[details]
Patch
Michael Catanzaro
Comment 21
2018-05-15 09:29:19 PDT
Committed
r231804
: <
https://trac.webkit.org/changeset/231804
>
Carlos Garcia Campos
Comment 22
2018-05-15 23:32:07 PDT
Comment on
attachment 340415
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=340415&action=review
> Source/WebCore/platform/network/soup/SoupNetworkSession.h:29 > +#include "URL.h"
Do we really need to include it in the header? I think we can forward declare it by adding class URL below and include it in the cpp.
Michael Catanzaro
Comment 23
2018-05-16 16:02:04 PDT
You're right, sorry for not checking that first.
Michael Catanzaro
Comment 24
2018-05-16 16:03:07 PDT
Committed
r231876
: <
https://trac.webkit.org/changeset/231876
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug