[GTK] SoupNetworkSession.h:68:62: error: unknown type name 'URL' https://bugs.webkit.org/show_bug.cgi?id=185378

Unreviewed, just replace unneeded #include with a forward declaration

* platform/network/soup/SoupNetworkSession.h:

Canonical link: https://commits.webkit.org/201168@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231876 268f45cc-cd09-0410-ab3c-d52691b4dbfc